--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           </p>
           <div class="buttons">
             <a href="/image/saksham the finder (1).pdf.pdf" class="primary-btn" download="">Download Resume</a>
-            <a href="./contact.html" class="primary-btn outline">Hire Me</a>
+            <a href="#contact" class="primary-btn outline">Hire Me</a>
           </div>
         </div>
       </div>
